feat: add photo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <header>
         <h1>Yuriy Lavroushin</h1>
         <h2>Junior Front-End Developer</h2>
+        <p>
+            <img src="img/avatar.jpg" height="512" alt="My_photo">
+        </p>
+          
     </header>
 
     <!-- Основной контент -->
