--- a/index.html
+++ b/index.html
@@ -10,52 +10,58 @@
 <body>
 
     <!-- Заголовок -->
-    <header>
-        <h1>Yuriy Lavroushin</h1>
-        <h2>Junior Front-End Developer</h2>
-        <p>
-            <img src="img/avatar.jpg" height="512" alt="My_photo">
-        </p>
-          
+    <header class="center">
+        <div class="head-content">
+            <h1>Yuriy Lavroushin</h1>
+            <h2>Junior Front-End Developer</h2>
+            <p>
+                <img src="img/avatar.jpg" height="512" alt="My_photo">
+            </p>
+        </div>
     </header>
 
     <!-- Основной контент -->
-    <content>
-
-        <h2>Contacts</h2>
-
-        <ul>
-            <li>Phone Number: +7-000-000-00-00</li>
-            <li>E-mail: myemail@example.com</li>
-            <li>GitHub: spacehummer</li>
-        </ul>
-
-        <h2>About Me</h2>
-
-        <p>I love everything related to electronics, engineering and development. Initially, I saw myself as a civill engineer, but in the course of my life I realized that programming and software development attract me more. I had an interesting experience working on networking hardware and some website development.
-        </p>
-
-        <p>Now I am focused on software development because I am sure that various software products are important for improving the life of mankind. They improve it no less than construction and other modern technologies and are often intertwined with other technologies.
-        </p>
-
-        <h2>Skills</h2>
-
-        <ul>
-            <li>HTML</li>
-            <li>CSS (Basics)</li>
-            <li>Python (Basics)</li>
-            <li>C++ (Basics)</li>
-            <li>C# (Basics)</li>
-            <li>Microsoft Visual Studio, Visual Studio Code</li>
-            <li>PyCharm</li>
-            <li>Adobe Photoshop, Illustrator, InDesign</li>
-            <li>VBA (Basics)</li>
-        </ul>
-
-    </content>
+    <div  class="center">
+        <content>
+            <h2>Contacts</h2>
+            <ul>
+                <li>Phone Number: +7-000-000-00-00</li>
+                <li>E-mail: myemail@example.com</li>
+                <li>GitHub: spacehummer</li>
+            </ul>
+            <h2>About Me</h2>
+            <p>I love everything related to electronics, engineering and development. Initially, I saw myself as a civill engineer, but in the course of my life I realized that programming and software development attract me more. I had an interesting experience working on networking hardware and some website development.
+            </p>
+            <p>Now I am focused on software development because I am sure that various software products are important for improving the life of mankind. They improve it no less than construction and other modern technologies and are often intertwined with other technologies.
+            </p>
+            <h2>Skills</h2>
+            <div class="tech_logo">
+                <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5_logo">
+                <img src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3_logo">
+                <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54" alt="Python_logo">
+                <img src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white" alt="Cpp_logo">
+                <img src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white" alt="C_sharp_logo">
+                <img src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white" alt="VS_logo">
+                <img src="https://img.shields.io/badge/pycharm-143?style=for-the-badge&logo=pycharm&logoColor=black&color=black&labelColor=green" alt="PyChram_logo">
+                <img src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white" alt="Adobe_logo">
+            </div>
+        
+            <ul>
+                <li>HTML</li>
+                <li>CSS (Basics)</li>
+                <li>Python (Basics)</li>
+                <li>C++ (Basics)</li>
+                <li>C# (Basics)</li>
+                <li>Microsoft Visual Studio, Visual Studio Code</li>
+                <li>PyCharm</li>
+                <li>Adobe Photoshop, Illustrator, InDesign</li>
+                <li>VBA (Basics)</li>
+            </ul>
+        </content>
+    </div>
 
     <footer>
-        <p>RS_School task: CV#2. HTML, CSS & Git Basics</p>
+        <p id="footer-txt">RS_School task: CV#2. HTML, CSS & Git Basics</p>
     </footer>
 
 </body>
