fix: tru to add some feature, but cancel them

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
     </div>
 
     <footer>
-        <p id="footer-txt">RS_School task: CV#2. HTML, CSS & Git Basics</p>
+        <div id="footer-wrp">
+            <p class="footer-txt">RS_School task: CV#2. HTML, CSS & Git Basics</p>
+        </div>
     </footer>
 
 </body>
