fix: fix error with nonexistent html element name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Основной контент -->
     <div class="center">
-        <content>
+        <div class="content">
 
             <h2>Contacts</h2>
             <ul>
@@ -89,7 +89,7 @@
                 <li>English: A2-B1 level.</li>
             </ul>
 
-        </content>
+        </div>
     </div>
 
     <footer>
