fix: ampersand encoding

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <footer>
         <div id="footer-wrp">
-            <p class="footer-txt">RS_School task: CV#2. HTML, CSS & Git Basics</p>
+            <p class="footer-txt">RS_School task: CV#2. HTML, CSS &amp Git Basics</p>
         </div>
     </footer>
 
