refactor: add some semantics.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 <body>
 
     <!-- Заголовок -->
-    <header class="center">
-        <div class="head-content">
-            <h1>Yuriy Lavroushin</h1>
-            <h2>Junior Front-End Developer</h2>
-            <p>
-                <img src="img/avatar.jpg" height="512" alt="My_photo">
-            </p>
+    <header class="header">
+
+        <div class="content">
+            <div class="head-content">
+                <h1>Yuriy Lavroushin</h1>
+                <h2>Junior Front-End Developer</h2>
+                <p>
+                    <img src="img/avatar.jpg" height="512" alt="My_photo">
+                </p>
+            </div>
         </div>
+
     </header>
 
     <!-- Основной контент -->
-    <div class="center">
+    <main class="main">
+
         <div class="content">
 
             <h2>Contacts</h2>
@@ -90,7 +95,7 @@
             </ul>
 
         </div>
-    </div>
+    </main>
 
     <footer>
         <div id="footer-wrp">
