feat: add navigation list.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <header class="header">
 
         <div class="content">
-            <div class="head-content">
-                <h1>Yuriy Lavroushin</h1>
-                <h2>Junior Front-End Developer</h2>
-                <p>
-                    <img src="img/avatar.jpg" height="512" alt="My_photo">
-                </p>
+            <div class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__list__item">Contacts</li>
+                    <li class="navigation__list__item">About Me</li>
+                    <li class="navigation__list__item">Skills</li>
+                    <li class="navigation__list__item">Code Example</li>
+                    <li class="navigation__list__item">Experience</li>
+                    <li class="navigation__list__item">Education</li>
+                    <li class="navigation__list__item">Languages</li>
+                </ul>
             </div>
         </div>
 
@@ -28,6 +32,16 @@
     <main class="main">
 
         <div class="content">
+
+            <section class="content__content-block">
+                <div class="head-content">
+                    <h1>Yuriy Lavroushin</h1>
+                    <h2>Junior Front-End Developer</h2>
+                    <p>
+                        <img src="img/avatar.jpg" height="512" alt="My_photo">
+                    </p>
+                </div>
+            </section>
 
             <h2>Contacts</h2>
             <ul>
@@ -97,6 +111,7 @@
         </div>
     </main>
 
+    <!-- Подвал -->
     <footer>
         <div id="footer-wrp">
             <p class="footer-txt">RS_School task: CV#2. HTML, CSS &amp; Git Basics</p>
