feat: improve structure, rework header, add styles for header and footer.

--- a/index.html
+++ b/index.html
@@ -11,18 +11,31 @@
 <body>
 
     <!-- Заголовок -->
-    <header class="header">
-
-        <div class="content">
+    <header class="header" id="header">
+        <div class="content content-header">
             <div class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__list__item">Contacts</li>
-                    <li class="navigation__list__item">About Me</li>
-                    <li class="navigation__list__item">Skills</li>
-                    <li class="navigation__list__item">Code Example</li>
-                    <li class="navigation__list__item">Experience</li>
-                    <li class="navigation__list__item">Education</li>
-                    <li class="navigation__list__item">Languages</li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Contacts</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">About Me</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Skills</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Code Example</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Experience</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Education</a>
+                    </li>
+                    <li class="navigation__list__item">
+                        <a href="#" class="item__link">Languages</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -31,89 +44,117 @@
 
     <!-- Основной контент -->
     <main class="main">
-
         <div class="content">
 
-            <section class="content__content-block">
-                <div class="head-content">
+            <div class="content-wrapper">
+
+                <section class="content__content-block">
                     <h1>Yuriy Lavroushin</h1>
                     <h2>Junior Front-End Developer</h2>
                     <p>
                         <img src="img/avatar.jpg" height="512" alt="My_photo">
                     </p>
-                </div>
-            </section>
+                </section>
 
-            <h2>Contacts</h2>
-            <ul>
-                <li>Phone Number: +7-000-000-00-00</li>
-                <li>E-mail: myemail@example.com</li>
-                <li>GitHub: spacehummer</li>
-            </ul>
+                <section class="content__content-block"><h2>Contacts</h2>
+                    <ul>
+                        <li>Phone Number: +7-999-999-99-99</li>
+                        <li>E-mail: myemail@example.com</li>
+                        <li>GitHub: spacehummer</li>
+                    </ul>
+                </section>
 
-            <h2>About Me</h2>
-            <p>I love everything related to electronics, engineering and development. Initially, I saw myself as a
-                civill engineer, but in the course of my life I realized that programming and software development
-                attract me more. I had an interesting experience working on networking hardware and some website
-                development.
-            </p>
-            <p>Now I am focused on software development because I am sure that various software products are important
-                for improving the life of mankind. They improve it no less than construction and other modern
-                technologies and are often intertwined with other technologies.
-            </p>
+                <section class="content__content-block"><h2>About Me</h2>
+                    <p>I love everything related to electronics, engineering and development.
+                        Initially,
+                        I saw myself as a
+                        civill engineer, but in the course of my life I realized that programming
+                        and
+                        software development
+                        attract me more. I had an interesting experience working on networking
+                        hardware
+                        and some website
+                        development.
+                    </p>
+                    <p>Now I am focused on software development because I am sure that various
+                        software
+                        products are important
+                        for improving the life of mankind. They improve it no less than construction
+                        and
+                        other modern
+                        technologies and are often intertwined with other technologies.
+                    </p></section>
 
-            <h2>Skills</h2>
-            <div class="tech_logo">
-                <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
-                    alt="HTML5_logo">
-                <img src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
-                    alt="CSS3_logo">
-                <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
-                    alt="Python_logo">
-                <img src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white"
-                    alt="Cpp_logo">
-                <img src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white"
-                    alt="C_sharp_logo">
-                <img src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white"
-                    alt="VS_logo">
-                <img src="https://img.shields.io/badge/pycharm-143?style=for-the-badge&logo=pycharm&logoColor=black&color=black&labelColor=green"
-                    alt="PyChram_logo">
-                <img src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white"
-                    alt="Adobe_logo">
+                <section class="content__content-block"><h2>Skills</h2>
+                    <div class="tech_logo">
+                        <img
+                          src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
+                          alt="HTML5_logo">
+                        <img
+                          src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
+                          alt="CSS3_logo">
+                        <img
+                          src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
+                          alt="Python_logo">
+                        <img
+                          src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white"
+                          alt="Cpp_logo">
+                        <img
+                          src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white"
+                          alt="C_sharp_logo">
+                        <img
+                          src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white"
+                          alt="VS_logo">
+                        <img
+                          src="https://img.shields.io/badge/pycharm-143?style=for-the-badge&logo=pycharm&logoColor=black&color=black&labelColor=green"
+                          alt="PyChram_logo">
+                        <img
+                          src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white"
+                          alt="Adobe_logo">
+                    </div>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS (Basics)</li>
+                        <li>Python (Basics)</li>
+                        <li>C++ (Basics)</li>
+                        <li>C# (Basics)</li>
+                        <li>Microsoft Visual Studio, Visual Studio Code</li>
+                        <li>PyCharm</li>
+                        <li>Adobe Photoshop, Illustrator, InDesign</li>
+                        <li>VBA (Basics)</li>
+                    </ul>
+                </section>
+
+                <section class="content__content-block"><h2>Code Example</h2>
+                    <p>I'll add it later</p></section>
+
+                <section class="content__content-block"><h2>Experience</h2>
+                    <p>Participated in the development of networking hardware, as Test Engineer,
+                        Quality
+                        Architect and Technical writer.</p>
+                    <p>I participated in the development of the site in a small team, where I served
+                        as
+                        a designer, technical writer and content manager.</p></section>
+
+                <section class="content__content-block"><h2>Education</h2>
+                    <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in
+                        Mathematical and computer modeling of mechanical systems and processes.</p>
+                </section>
+
+                <section class="content__content-block"><h2>Languages</h2>
+                    <ul>
+                        <li>Russian: native speaker.</li>
+                        <li>English: A2-B1 level.</li>
+                    </ul>
+                </section>
+
             </div>
-            <ul>
-                <li>HTML</li>
-                <li>CSS (Basics)</li>
-                <li>Python (Basics)</li>
-                <li>C++ (Basics)</li>
-                <li>C# (Basics)</li>
-                <li>Microsoft Visual Studio, Visual Studio Code</li>
-                <li>PyCharm</li>
-                <li>Adobe Photoshop, Illustrator, InDesign</li>
-                <li>VBA (Basics)</li>
-            </ul>
-
-            <h2>Code Example</h2>
-            <p>I'll add it later</p>
-
-            <h2>Experience</h2>
-            <p>Participated in the development of networking hardware, as Test Engineer, Quality Architect and Technical writer.</p>
-            <p>I participated in the development of the site in a small team, where I served as a designer, technical writer and content manager.</p>
-
-            <h2>Education</h2>
-            <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in Mathematical and computer modeling of mechanical systems and processes.</p>
-
-            <h2>Languages</h2>
-            <ul>
-                <li>Russian: native speaker.</li>
-                <li>English: A2-B1 level.</li>
-            </ul>
 
         </div>
     </main>
 
     <!-- Подвал -->
-    <footer>
+    <footer class="footer" id="footer">
         <div id="footer-wrp">
             <p class="footer-txt">RS_School task: CV#2. HTML, CSS &amp; Git Basics</p>
         </div>
