feat: start implement grid structure for section

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <main class="main">
         <div class="content">
 
-            <div class="content-wrapper">
+            <div class="content__sections-wrapper">
 
-                <section class="content__content-block">
+                <section class="sections-wrapper__content-block general-info">
                     <h1>Yuriy Lavroushin</h1>
                     <h2>Junior Front-End Developer</h2>
                     <p>
@@ -56,7 +56,7 @@
                     </p>
                 </section>
 
-                <section class="content__content-block"><h2>Contacts</h2>
+                <section class="sections-wrapper__content-block"><h2>Contacts</h2>
                     <ul>
                         <li>Phone Number: +7-999-999-99-99</li>
                         <li>E-mail: myemail@example.com</li>
@@ -64,7 +64,7 @@
                     </ul>
                 </section>
 
-                <section class="content__content-block"><h2>About Me</h2>
+                <section class="sections-wrapper__content-block"><h2>About Me</h2>
                     <p>I love everything related to electronics, engineering and development.
                         Initially,
                         I saw myself as a
@@ -85,7 +85,7 @@
                         technologies and are often intertwined with other technologies.
                     </p></section>
 
-                <section class="content__content-block"><h2>Skills</h2>
+                <section class="sections-wrapper__content-block"><h2>Skills</h2>
                     <div class="tech_logo">
                         <img
                           src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
@@ -125,10 +125,10 @@
                     </ul>
                 </section>
 
-                <section class="content__content-block"><h2>Code Example</h2>
+                <section class="sections-wrapper__content-block"><h2>Code Example</h2>
                     <p>I'll add it later</p></section>
 
-                <section class="content__content-block"><h2>Experience</h2>
+                <section class="sections-wrapper__content-block"><h2>Experience</h2>
                     <p>Participated in the development of networking hardware, as Test Engineer,
                         Quality
                         Architect and Technical writer.</p>
@@ -136,12 +136,12 @@
                         as
                         a designer, technical writer and content manager.</p></section>
 
-                <section class="content__content-block"><h2>Education</h2>
+                <section class="sections-wrapper__content-block"><h2>Education</h2>
                     <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in
                         Mathematical and computer modeling of mechanical systems and processes.</p>
                 </section>
 
-                <section class="content__content-block"><h2>Languages</h2>
+                <section class="sections-wrapper__content-block"><h2>Languages</h2>
                     <ul>
                         <li>Russian: native speaker.</li>
                         <li>English: A2-B1 level.</li>
