--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Заголовок -->
     <header class="header" id="header">
         <div class="content content-header">
-            <div class="navigation">
+            <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__list__item">
                         <a href="#" class="item__link">Contacts</a>
@@ -49,7 +49,7 @@
                         <a href="#" class="item__link">Languages</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
 
     </header>
