feat: update footer.

--- a/index.html
+++ b/index.html
@@ -221,9 +221,14 @@ function addAllFieldsAsTextNode(
 
     <!-- Подвал -->
     <footer class="footer" id="footer">
+      <div class="content content-footer">
         <div id="footer-wrp">
-            <p class="footer-txt">RS_School task: CV#2. HTML, CSS &amp; Git Basics</p>
+          <div class="footer-txt">&copy; 2022
+            <a href="https://github.com/spacehummer" class="my-github-name-link">spacehummer</a>
+          </div>
+          <a href="https://github.com/irinainina" class="footer-rss-logo"></a>
         </div>
+      </div>
     </footer>
 </div>
 
