fix: fix footer, add section with eductation project.

--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@ function addAllFieldsAsTextNode(
                         Mathematical and computer modeling of mechanical systems and processes.</p>
                 </section>
 
+              <section class="sections-wrapper__content-block section">
+                <h2>Projects</h2>
+                <p>Education project, CV: <a href="https://github.com/spacehummer/rsschool-cv">rsschool-cv</a></p>
+              </section>
+
                 <section class="sections-wrapper__content-block section">
                     <h2>Languages</h2>
                     <ul>
@@ -226,7 +231,7 @@ function addAllFieldsAsTextNode(
           <div class="footer-txt">&copy; 2022
             <a href="https://github.com/spacehummer" class="my-github-name-link">spacehummer</a>
           </div>
-          <a href="https://github.com/irinainina" class="footer-rss-logo"></a>
+          <a href="https://rs.school/js/" class="footer-rss-logo"></a>
         </div>
       </div>
     </footer>
