fix: fix avatar alt.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </svg>
                     </div>
                     <h2>Junior Front-End Developer</h2>
-                    <img src="img/avatar.jpg" height="512" alt="My_photo">
+                    <img src="img/avatar.jpg" height="512" alt="My photo.">
                 </section>
 
                 <section class="sections-wrapper__content-block section" id="contacts">
