--- a/index.html
+++ b/index.html
@@ -2,155 +2,159 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Yuriy Lavroushin CV - RS_School Task</title>
-    <!--  normalize.css for normalize default agent styles.  -->
-    <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
-    <!--  Styles for highlight code in code example section by highlight.js.  -->
-    <link rel="stylesheet" href="./styles/vs.min.css">
-    <!--  My styles.  -->
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
-    <!--  Script for highlight code in code example section by highlight.js.  -->
-    <script src="./js/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
+  <meta charset="utf-8">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Yuriy Lavroushin CV - RS_School Task</title>
+  <!--  normalize.css for normalize default agent styles.  -->
+  <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
+  <!--  Styles for highlight code in code example section by highlight.js.  -->
+  <link rel="stylesheet" href="./styles/vs.min.css">
+  <!--  My styles.  -->
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <!--  Script for highlight code in code example section by highlight.js.  -->
+  <script src="./js/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </head>
 
 <body>
 
 <div class="root-container">
 
-    <!-- Заголовок -->
-    <header class="header" id="header">
-        <div class="content content-header">
-            <nav class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Contacts</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">About Me</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Skills</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Code Example</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Experience</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Education</a>
-                    </li>
-                    <li class="navigation__list__item">
-                        <a href="#" class="item__link">Languages</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+  <!-- Заголовок -->
+  <header class="header" id="header">
+    <div class="content content-header">
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Contacts</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">About Me</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Skills</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Code Example</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Experience</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Education</a>
+          </li>
+          <li class="navigation__list__item">
+            <a href="#" class="item__link">Languages</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
-    </header>
+  </header>
 
-    <!-- Основной контент -->
-    <main class="main">
-        <div class="content">
+  <!-- Основной контент -->
+  <main class="main">
+    <div class="content">
 
-            <div class="content__sections-wrapper">
+      <div class="content__sections-wrapper">
 
-                <section class="sections-wrapper__content-block general-info">
-                    <h1>Yuriy Lavroushin</h1>
-                    <!-- preserveAspectRatio='none'-->
-                    <!-- viewBox="0 0 128 8" preserveAspectRatio='xMidYMid meet'-->
-                    <div class="general-info__separator-wrp">
-                        <svg class="general-info__separator" width="576" height="2"
-                             xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 576 2">
-                            <g id="Separator">
-                                <rect width="576" height="2"/>
-                            </g>
-                        </svg>
-                    </div>
-                    <h2>Junior Front-End Developer</h2>
-                    <img src="img/avatar.jpg" height="512" alt="My photo.">
-                </section>
+        <section class="sections-wrapper__content-block general-info">
+          <h1>Yuriy Lavroushin</h1>
+          <!-- preserveAspectRatio='none'-->
+          <!-- viewBox="0 0 128 8" preserveAspectRatio='xMidYMid meet'-->
+          <div class="general-info__separator-wrp">
+            <svg class="general-info__separator" width="576" height="2"
+                 xmlns="http://www.w3.org/2000/svg"
+                 viewBox="0 0 576 2">
+              <g id="Separator">
+                <rect width="576" height="2"/>
+              </g>
+            </svg>
+          </div>
+          <h2>Junior Front-End Developer</h2>
+          <img src="img/avatar.jpg" height="512" alt="My photo.">
+        </section>
 
-                <section class="sections-wrapper__content-block section" id="contacts">
-                    <h2>Contacts</h2>
-                    <ul>
-                        <li>Phone Number: +7-999-999-99-99</li>
-                        <li>E-mail: myemail@example.com</li>
-                        <li>GitHub: spacehummer</li>
-                    </ul>
-                </section>
+        <section class="sections-wrapper__content-block section" id="contacts">
+          <h2>Contacts</h2>
+          <ul>
+            <li>Phone Number: +7-999-999-99-99</li>
+            <li>E-mail: myemail@example.com</li>
+            <li>GitHub: spacehummer</li>
+          </ul>
+        </section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>About Me</h2>
-                    <p>I love everything related to electronics, engineering and development.
-                        Initially,
-                        I saw myself as a
-                        civill engineer, but in the course of my life I realized that programming
-                        and
-                        software development
-                        attract me more. I had an interesting experience working on networking
-                        hardware
-                        and some website
-                        development.
-                    </p>
-                    <p>Now I am focused on software development because I am sure that various
-                        software
-                        products are important
-                        for improving the life of mankind. They improve it no less than construction
-                        and
-                        other modern
-                        technologies and are often intertwined with other technologies.
-                    </p></section>
+        <section class="sections-wrapper__content-block section">
+          <h2>About Me</h2>
+          <p>I love everything related to electronics, engineering and development.
+            Initially,
+            I saw myself as a
+            civill engineer, but in the course of my life I realized that programming
+            and
+            software development
+            attract me more. I had an interesting experience working on networking
+            hardware
+            and some website
+            development.
+          </p>
+          <p>Now I am focused on software development because I am sure that various
+            software
+            products are important
+            for improving the life of mankind. They improve it no less than construction
+            and
+            other modern
+            technologies and are often intertwined with other technologies.
+          </p></section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>Skills</h2>
-                    <div class="tech_logo">
-                        <img
-                          src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
-                          alt="HTML5_logo">
-                        <img
-                          src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
-                          alt="CSS3_logo">
-                        <img
-                          src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
-                          alt="Python_logo">
-                        <img
-                          src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white"
-                          alt="Cpp_logo">
-                        <img
-                          src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white"
-                          alt="C_sharp_logo">
-                        <img
-                          src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white"
-                          alt="VS_logo">
-                        <img
-                          src="https://img.shields.io/badge/pycharm-143?style=for-the-badge&logo=pycharm&logoColor=black&color=black&labelColor=green"
-                          alt="PyChram_logo">
-                        <img
-                          src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white"
-                          alt="Adobe_logo">
-                    </div>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS (Basics)</li>
-                        <li>Python (Basics)</li>
-                        <li>C++ (Basics)</li>
-                        <li>C# (Basics)</li>
-                        <li>Microsoft Visual Studio, Visual Studio Code</li>
-                        <li>PyCharm</li>
-                        <li>Adobe Photoshop, Illustrator, InDesign</li>
-                        <li>VBA (Basics)</li>
-                    </ul>
-                </section>
+        <section class="sections-wrapper__content-block section">
+          <h2>Skills</h2>
+          <div class="tech_logo">
+            <img
+              src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
+              alt="HTML5_logo">
+            <img
+              src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
+              alt="CSS3_logo">
+            <img
+              src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
+              alt="Python_logo">
+            <img
+              src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white"
+              alt="Cpp_logo">
+            <img
+              src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white"
+              alt="C_sharp_logo">
+            <img
+              src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white"
+              alt="VS_logo">
+            <img
+              src="https://img.shields.io/badge/pycharm-143?style=for-the-badge&logo=pycharm&logoColor=black&color=black&labelColor=green"
+              alt="PyChram_logo">
+            <img
+              src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white"
+              alt="Adobe_logo">
+          </div>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>Webpack (basics)</li>
+            <li>Python (basics)</li>
+            <li>C++ (basics)</li>
+            <li>C# (basics)</li>
+            <li>Web Storm</li>
+            <li>Microsoft Visual Studio, Visual Studio Code</li>
+            <li>PyCharm</li>
+            <li>Adobe Photoshop, Illustrator, InDesign</li>
+            <li>Figma</li>
+            <li>VBA (basics)</li>
+          </ul>
+        </section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>Code Example</h2>
+        <section class="sections-wrapper__content-block section">
+          <h2>Code Example</h2>
 <pre class="js code-example">
 <code>
 /**
@@ -189,52 +193,53 @@ function addAllFieldsAsTextNode(
 }
 </code>
 </pre>
-                </section>
+        </section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>Experience</h2>
-                    <p>Participated in the development of networking hardware, as Test Engineer,
-                        Quality
-                        Architect and Technical writer.</p>
-                    <p>I participated in the development of the site in a small team, where I served
-                        as
-                        a designer, technical writer and content manager.</p></section>
+        <section class="sections-wrapper__content-block section">
+          <h2>Experience</h2>
+          <p>Participated in the development of networking hardware, as Test Engineer,
+            Quality
+            Architect and Technical writer.</p>
+          <p>I participated in the development of the site in a small team, where I served
+            as
+            a designer, technical writer and content manager.</p></section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>Education</h2>
-                    <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in
-                        Mathematical and computer modeling of mechanical systems and processes.</p>
-                </section>
+        <section class="sections-wrapper__content-block section">
+          <h2>Education</h2>
+          <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in
+            Mathematical and computer modeling of mechanical systems and processes.</p>
+        </section>
 
-              <section class="sections-wrapper__content-block section">
-                <h2>Projects</h2>
-                <p>Education project, CV: <a href="https://github.com/spacehummer/rsschool-cv">rsschool-cv</a></p>
-              </section>
+        <section class="sections-wrapper__content-block section">
+          <h2>Projects</h2>
+          <p>Education project, CV: <a
+            href="https://github.com/spacehummer/rsschool-cv">rsschool-cv</a></p>
+        </section>
 
-                <section class="sections-wrapper__content-block section">
-                    <h2>Languages</h2>
-                    <ul>
-                        <li>Russian: native speaker.</li>
-                        <li>English: A2-B1 level.</li>
-                    </ul>
-                </section>
+        <section class="sections-wrapper__content-block section">
+          <h2>Languages</h2>
+          <ul>
+            <li>Russian: native speaker.</li>
+            <li>English: A2-B1 level.</li>
+          </ul>
+        </section>
 
-            </div>
-
-        </div>
-    </main>
-
-    <!-- Подвал -->
-    <footer class="footer" id="footer">
-      <div class="content content-footer">
-        <div id="footer-wrp">
-          <div class="footer-txt">&copy; 2022
-            <a href="https://github.com/spacehummer" class="my-github-name-link">spacehummer</a>
-          </div>
-          <a href="https://rs.school/js/" class="footer-rss-logo"></a>
-        </div>
       </div>
-    </footer>
+
+    </div>
+  </main>
+
+  <!-- Подвал -->
+  <footer class="footer" id="footer">
+    <div class="content content-footer">
+      <div id="footer-wrp">
+        <div class="footer-txt">&copy; 2022
+          <a href="https://github.com/spacehummer" class="my-github-name-link">spacehummer</a>
+        </div>
+        <a href="https://rs.school/js/" class="footer-rss-logo"></a>
+      </div>
+    </div>
+  </footer>
 </div>
 
 </body>
