feat: add icons of technologies to skills lists, add elements to skills list.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
               src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
               alt="CSS3_logo">
             <img
+              src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&logo=javascript&logoColor=%23F7DF1E"
+              alt="JS_logo">
+            <img
+              src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white"
+              alt="Git">
+            <img
+              src="https://img.shields.io/badge/webpack-%238DD6F9.svg?style=for-the-badge&logo=webpack&logoColor=black"
+              alt="Webpack">
+            <img
               src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
               alt="Python_logo">
             <img
@@ -127,6 +136,9 @@
               src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white"
               alt="C_sharp_logo">
             <img
+              src="https://img.shields.io/badge/webstorm-143?style=for-the-badge&logo=webstorm&logoColor=white&color=black"
+              alt="WebStorm">
+            <img
               src="https://img.shields.io/badge/Visual%20Studio-5C2D91.svg?style=for-the-badge&logo=visual-studio&logoColor=white"
               alt="VS_logo">
             <img
@@ -135,19 +147,23 @@
             <img
               src="https://img.shields.io/badge/adobe-%23FF0000.svg?style=for-the-badge&logo=adobe&logoColor=white"
               alt="Adobe_logo">
+            <img
+              src="https://img.shields.io/badge/figma-%23F24E1E.svg?style=for-the-badge&logo=figma&logoColor=white"
+              alt="Figma">
           </div>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>JS</li>
             <li>Webpack (basics)</li>
+            <li>Git, GitHub</li>
             <li>Python (basics)</li>
             <li>C++ (basics)</li>
             <li>C# (basics)</li>
-            <li>Web Storm</li>
+            <li>WebStorm</li>
             <li>Microsoft Visual Studio, Visual Studio Code</li>
             <li>PyCharm</li>
-            <li>Adobe Photoshop, Illustrator, InDesign</li>
+            <li>Adobe Photoshop, Adobe Illustrator, Adobe InDesign</li>
             <li>Figma</li>
             <li>VBA (basics)</li>
           </ul>
