--- a/index.html
+++ b/index.html
@@ -228,8 +228,15 @@ function addAllFieldsAsTextNode(
 
         <section class="sections-wrapper__content-block section">
           <h2>Projects</h2>
-          <p>Education project, CV: <a
-            href="https://github.com/spacehummer/rsschool-cv">rsschool-cv</a></p>
+          <ul>
+            <li>
+                Education project, CV: <a href="https://github.com/spacehummer/rsschool-cv">`rsschool-cv` on GitHub</a>
+            </li>
+            <li>
+                Education project, Plants: <a href="https://rolling-scopes-school.github.io/spacehummer-JSFEPRESCHOOL2022Q4/plants/">`Plants` on GitHub pages</a>
+            </li>
+          </ul>
+
         </section>
 
         <section class="sections-wrapper__content-block section">
