feat: rework contacts block: format structure to table in CSS, template for missed list markers; experiments with grid - cancelled, insufficient support.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
         <section class="sections-wrapper__content-block section" id="contacts">
           <h2>Contacts</h2>
-          <ul>
-            <li>Phone Number: +7-999-999-99-99</li>
-            <li>E-mail: myemail@example.com</li>
-            <li>GitHub: spacehummer</li>
+          <ul class="contacts-list">
+            <li><span>Phone Number: </span><span>+7-999-999-99-99</span></li>
+            <li><span>E-mail: </span><span>myemail@example.com</span></li>
+            <li><span>GitHub: </span><span>spacehummer</span></li>
           </ul>
         </section>
 
