feat: rework projects list into table by styles, remake default element marks.

--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@ function addAllFieldsAsTextNode(
 
         <section class="sections-wrapper__content-block section">
           <h2>Projects</h2>
-          <ul>
+          <ul class="projects-list">
             <li>
-                Education project, CV: <a href="https://github.com/spacehummer/rsschool-cv">`rsschool-cv` on GitHub</a>
+              <span>Education project, CV:</span><a href="https://github.com/spacehummer/rsschool-cv">`rsschool-cv` on GitHub</a>
             </li>
             <li>
-                Education project, Plants: <a href="https://rolling-scopes-school.github.io/spacehummer-JSFEPRESCHOOL2022Q4/plants/">`Plants` on GitHub pages</a>
+              <span>Education project, Plants:</span><a href="https://rolling-scopes-school.github.io/spacehummer-JSFEPRESCHOOL2022Q4/plants/">`Plants` on GitHub pages</a>
             </li>
           </ul>
 
